Bug 448257 - KWrite does not remove temporary .diff files that it creates
Summary: KWrite does not remove temporary .diff files that it creates
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (show other bugs)
Version: 21.08.2
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-11 13:56 UTC by David
Modified: 2022-01-30 17:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David 2022-01-11 13:56:20 UTC
SUMMARY
If I open some file in kwrite, modify it, check the window again and choose to see the differences in the dialog presented, it will create a .diff file to show the differences, but will not remove the file it just created after the application is closed.

STEPS TO REPRODUCE
1. Create some simple text file with some text on it.
2. Open said file in KWrite.
3. Modify the file through a different text teditor.
4. Switch back to the window that has KWrite with the text file opened.
5. Once it shows options for what to do now that the file has changed, select to see the difference.
6. Close KWrite.

OBSERVED RESULT
Leaves a randomly-named .diff file in the folder where the original file lies.

EXPECTED RESULT
Should not leave any additional files, and if it creates any such file, it should be in a temporary system folder.

SOFTWARE/OS VERSIONS
Operating System: Debian GNU/Linux
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2
Kernel Version: 5.15.0-2-amd64 (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 2700 Eight-Core Processor
Memory: 15.6 GiB of RAM
Graphics Processor: AMD VEGA10

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-01-30 09:20:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/273
Comment 2 Christoph Cullmann 2022-01-30 17:58:38 UTC
Git commit 19c01ae28b7f6b7f224313febc4ab7d3909a9eed by Christoph Cullmann, on behalf of Jan Paul Batrina.
Committed on 30/01/2022 at 17:31.
Pushed by cullmann into branch 'master'.

KateModOnHdPrompt::slotDiff: Create diff file in temp folder

M  +1    -1    src/dialogs/katedialogs.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/19c01ae28b7f6b7f224313febc4ab7d3909a9eed