KateModOnHdPrompt::slotDiff: Create diff file in temp folder

BUG: 448257