src/dialogs/katedialogs.cpp
@@ -1392,7 +1392,7 @@ void KateModOnHdPrompt::slotDiff()
         return;
     }
 
-    m_diffFile = new QTemporaryFile(QLatin1String("XXXXXX.diff"));
+    m_diffFile = new QTemporaryFile(QDir::temp().filePath(QLatin1String("XXXXXX.diff")));
     m_diffFile->open();
 
     // Start a KProcess that creates a diff
